# docs/swagger.json
@@ -231,6 +231,12 @@
                             "$ref": "#/definitions/HttpOutput"
                         }
                     },
+                    "202": {
+                        "description": "Accepted",
+                        "schema": {
+                            "$ref": "#/definitions/HttpOutput"
+                        }
+                    },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
@@ -276,28 +282,28 @@
         "ErrCode": {
             "type": "string",
             "enum": [
-                "SERVER_INTERNAL_ERROR",
-                "SERVER_NOT_RESPONDING",
-                "SERVICE_TEMPORARILY_UNAVAILABLE",
-                "USER_INVALID_DATA",
-                "USER_ALREADY_EXISTS",
-                "USER_NOT_FOUND",
                 "AUTH_INVALID_TOKEN",
                 "AUTH_EXPIRED_TOKEN",
                 "AUTH_TOKEN_NOT_PROVIDED",
-                "AUTH_INVALID_EMAIL_OR_PASSWORD"
+                "AUTH_INVALID_EMAIL_OR_PASSWORD",
+                "USER_INVALID_DATA",
+                "USER_ALREADY_EXISTS",
+                "USER_NOT_FOUND",
+                "SERVER_INTERNAL_ERROR",
+                "SERVER_NOT_RESPONDING",
+                "SERVICE_TEMPORARILY_UNAVAILABLE"
             ],
             "x-enum-varnames": [
-                "ErrServerInternalError",
-                "ErrServerNotResponding",
-                "ErrServiceTemporarilyUnavailable",
-                "ErrUserInvalidData",
-                "ErrUserAlreadyExists",
-                "ErrUserNotFound",
                 "ErrAuthInvalidToken",
                 "ErrAuthExpiredToken",
                 "ErrAuthTokenNotProvided",
-                "ErrAuthInvalidEmailOrPassword"
+                "ErrAuthInvalidEmailOrPassword",
+                "ErrUserInvalidData",
+                "ErrUserAlreadyExists",
+                "ErrUserNotFound",
+                "ErrServerInternalError",
+                "ErrServerNotResponding",
+                "ErrServiceTemporarilyUnavailable"
             ]
         },
         "HttpOutput": {
